Fix link to advanced search. Fix quick reply box height. Fix forum list spacing.

--- a/theme/content.css
+++ b/theme/content.css
@@ -29,7 +29,7 @@ ul.topiclist li.row dl {
 ul.topiclist dt {
 	display: block;
 	float: left;
-	width: 50%;
+	width: 55%;
 	font-size: 1.1em;
 	padding-left: 5px;
 	padding-right: 5px;
@@ -145,7 +145,7 @@ dl.icon dt li {
 }
 
 dd.lastpost {
-	width: 25%;
+	width: 20%;
 	font-size: 1.1em;
 }
 
