--- a/theme/forms.css
+++ b/theme/forms.css
@@ -271,6 +271,10 @@ fieldset.submit-buttons input {
 	color: #333333;
 }
 
+#quick_reply #message-box textarea {
+	height: 150px;
+}
+
 /* Emoticons panel */
 #smiley-box {
 	width: 18%;
